fix: enforce authorization and seed development data